// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db query Get FlightLog tests getAllFlightLogs between start and end date should match snapshot 1`] = `
{
  "aircraftRegistration": "OH-P28",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 4,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Jukka1",
  "billingRemarks": "N/A",
  "blockMins": 155,
  "blockTime": "02:35",
  "createdAt": Any<String>,
  "createdBy": "Jukka1",
  "crew2MemberId": "Pekka1",
  "crew2Role": "FI",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "da40tndra",
  "flightMins": 110,
  "flightTime": "01:50",
  "flightType": "HAR",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 55,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 75,
  "invoiceNumber": "INV003",
  "isBillableFlight": true,
  "isBilled": true,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1741094400",
  "landingTimeUtc": 2025-03-04T13:20:00.000Z,
  "nightFlyingMins": 60,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 3,
  "offBlockTimeEpoch": "1741086000",
  "offBlockTimeUtc": 2025-03-04T11:00:00.000Z,
  "oilUpliftLitres": 1.2,
  "onBlockTimeEpoch": "1741095300",
  "onBlockTimeUtc": 2025-03-04T13:35:00.000Z,
  "personalRemarks": "Cargo delivery",
  "personsOnBoard": 4,
  "picMemberId": "Jukka1",
  "picRole": "PIC",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1741087800",
  "takeoffTimeUtc": 2025-03-04T11:30:00.000Z,
  "totalTimeInService": 1.74,
  "updatedAt": Any<String>,
  "updatedBy": "Jukka1",
}
`;

exports[`Db query Get FlightLog tests getAllFlightLogs for end date should match snapshot 1`] = `
{
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFTU",
  "billableMemberId": "Sanna1",
  "billingRemarks": "Night navigation exercise",
  "blockMins": 125,
  "blockTime": "02:05",
  "createdAt": Any<String>,
  "createdBy": "Sanna1",
  "crew2MemberId": "Juha1",
  "crew2Role": "FE",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "eject",
  "flightMins": 105,
  "flightTime": "01:45",
  "flightType": "MAT",
  "fuelRemainingLitres": 60,
  "fuelUpliftLitres": 45,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 60,
  "invoiceNumber": "INV004",
  "isBillableFlight": true,
  "isBilled": true,
  "isDtoTrainingFlight": false,
  "landingTimeEpoch": "1710205200",
  "landingTimeUtc": 2024-03-12T01:00:00.000Z,
  "nightFlyingMins": 115,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1710198300",
  "offBlockTimeUtc": 2024-03-11T23:05:00.000Z,
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1710205800",
  "onBlockTimeUtc": 2024-03-12T01:10:00.000Z,
  "personalRemarks": "Cross-day night flight",
  "personsOnBoard": 2,
  "picMemberId": "Sanna1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1710198900",
  "takeoffTimeUtc": 2024-03-11T23:15:00.000Z,
  "totalTimeInService": 1.92,
  "updatedAt": Any<String>,
  "updatedBy": "Sanna1",
}
`;

exports[`Db query Get FlightLog tests getAllFlightLogs for specific member id should match snapshot 1`] = `
{
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFTU",
  "billableMemberId": "Sanna1",
  "billingRemarks": "Night navigation exercise",
  "blockMins": 125,
  "blockTime": "02:05",
  "createdAt": Any<String>,
  "createdBy": "Sanna1",
  "crew2MemberId": "Juha1",
  "crew2Role": "FE",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "eject",
  "flightMins": 105,
  "flightTime": "01:45",
  "flightType": "MAT",
  "fuelRemainingLitres": 60,
  "fuelUpliftLitres": 45,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 60,
  "invoiceNumber": "INV004",
  "isBillableFlight": true,
  "isBilled": true,
  "isDtoTrainingFlight": false,
  "landingTimeEpoch": "1710205200",
  "landingTimeUtc": 2024-03-12T01:00:00.000Z,
  "nightFlyingMins": 115,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1710198300",
  "offBlockTimeUtc": 2024-03-11T23:05:00.000Z,
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1710205800",
  "onBlockTimeUtc": 2024-03-12T01:10:00.000Z,
  "personalRemarks": "Cross-day night flight",
  "personsOnBoard": 2,
  "picMemberId": "Sanna1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1710198900",
  "takeoffTimeUtc": 2024-03-11T23:15:00.000Z,
  "totalTimeInService": 1.92,
  "updatedAt": Any<String>,
  "updatedBy": "Sanna1",
}
`;

exports[`Db query Get FlightLog tests getAllFlightLogs for start date should match snapshot 1`] = `
{
  "aircraftRegistration": "OH-P28",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 4,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Jukka1",
  "billingRemarks": "N/A",
  "blockMins": 155,
  "blockTime": "02:35",
  "createdAt": Any<String>,
  "createdBy": "Jukka1",
  "crew2MemberId": "Pekka1",
  "crew2Role": "FI",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "da40tndra",
  "flightMins": 110,
  "flightTime": "01:50",
  "flightType": "HAR",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 55,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 75,
  "invoiceNumber": "INV003",
  "isBillableFlight": true,
  "isBilled": true,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1741094400",
  "landingTimeUtc": 2025-03-04T13:20:00.000Z,
  "nightFlyingMins": 60,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 3,
  "offBlockTimeEpoch": "1741086000",
  "offBlockTimeUtc": 2025-03-04T11:00:00.000Z,
  "oilUpliftLitres": 1.2,
  "onBlockTimeEpoch": "1741095300",
  "onBlockTimeUtc": 2025-03-04T13:35:00.000Z,
  "personalRemarks": "Cargo delivery",
  "personsOnBoard": 4,
  "picMemberId": "Jukka1",
  "picRole": "PIC",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1741087800",
  "takeoffTimeUtc": 2025-03-04T11:30:00.000Z,
  "totalTimeInService": 1.74,
  "updatedAt": Any<String>,
  "updatedBy": "Jukka1",
}
`;

exports[`Db query Get FlightLog tests getAllFlightLogs with Captain and copilot should return filtered logs 1`] = `
{
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 1,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "billingRemarks": "N/A",
  "blockMins": 135,
  "blockTime": "02:15",
  "createdAt": Any<String>,
  "createdBy": "Matti1",
  "crew2MemberId": "Jukka1",
  "crew2Role": "FI",
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "mikify",
  "flightMins": 105,
  "flightTime": "01:45",
  "flightType": "KOU",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 45,
  "invoiceNumber": "INV001",
  "isBillableFlight": true,
  "isBilled": true,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1740823200",
  "landingTimeUtc": 2025-03-01T10:00:00.000Z,
  "nightFlyingMins": 30,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1740816000",
  "offBlockTimeUtc": 2025-03-01T08:00:00.000Z,
  "oilUpliftLitres": 1.5,
  "onBlockTimeEpoch": "1740824100",
  "onBlockTimeUtc": 2025-03-01T10:15:00.000Z,
  "personalRemarks": "Smooth flight",
  "personsOnBoard": 4,
  "picMemberId": "Liisa1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740816900",
  "takeoffTimeUtc": 2025-03-01T08:15:00.000Z,
  "totalTimeInService": 2,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;

exports[`Db query Get FlightLog tests getFlightLogTotals returns totals for all ac 1`] = `
[
  {
    "acTotalFlightHours": 4783.333333333333,
    "acTotalFlightTime": "4783:20",
    "aircraftRegistration": "OH-STL",
    "ajlbSeqNo": 3,
    "flightLogMinsThisAjlb": 0,
    "flightTimeThisAjlb": "0:00",
    "totalTlightMinsAtAjlbStart": 287000,
    "totalTlightTimeAtAjlbStart": "4783:20",
  },
  {
    "acTotalFlightHours": 6118.666666666667,
    "acTotalFlightTime": "6118:40",
    "aircraftRegistration": "OH-IHQ",
    "ajlbSeqNo": 2,
    "flightLogMinsThisAjlb": 120,
    "flightTimeThisAjlb": "2:00",
    "totalTlightMinsAtAjlbStart": 367000,
    "totalTlightTimeAtAjlbStart": "6116:40",
  },
  {
    "acTotalFlightHours": 5230.166666666667,
    "acTotalFlightTime": "5230:10",
    "aircraftRegistration": "OH-P28",
    "ajlbSeqNo": 4,
    "flightLogMinsThisAjlb": 110,
    "flightTimeThisAjlb": "1:50",
    "totalTlightMinsAtAjlbStart": 313700,
    "totalTlightTimeAtAjlbStart": "5228:20",
  },
]
`;

exports[`Db query Get FlightLog tests getFlightLogTotals returns totals for all ac 2`] = `
[
  {
    "acTotalFlightHours": 4783.333333333333,
    "acTotalFlightTime": "4783:20",
    "aircraftRegistration": "OH-STL",
    "ajlbSeqNo": 3,
    "flightLogMinsThisAjlb": 0,
    "flightTimeThisAjlb": "0:00",
    "totalTlightMinsAtAjlbStart": 287000,
    "totalTlightTimeAtAjlbStart": "4783:20",
  },
]
`;

exports[`Db query insert tests insertFlightLog inserts a new flight log to the db, querying using returned flight id returns the row, row can be deleted using flight id 1`] = `
{
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbSeqNo": 3,
  "arrivalAirport": "EFVA",
  "billableMemberId": "Matti1",
  "billingRemarks": "Test flight",
  "blockMins": 75,
  "blockTime": "01:15",
  "createdAt": Any<String>,
  "createdBy": "Matti1",
  "crew2MemberId": "Pekka1",
  "crew2Role": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": Any<String>,
  "flightMins": 60,
  "flightTime": "01:00",
  "flightType": "KOU",
  "fuelRemainingLitres": 22,
  "fuelUpliftLitres": 100,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 0,
  "invoiceNumber": null,
  "isBillableFlight": true,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1741583700",
  "landingTimeUtc": 2025-03-10T05:15:00.000Z,
  "nightFlyingMins": 0,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 1,
  "offBlockTimeEpoch": "1741579500",
  "offBlockTimeUtc": 2025-03-10T04:05:00.000Z,
  "oilUpliftLitres": 5,
  "onBlockTimeEpoch": "1741584000",
  "onBlockTimeUtc": 2025-03-10T05:20:00.000Z,
  "personalRemarks": "No remarks",
  "personsOnBoard": 4,
  "picMemberId": "Liisa1",
  "picRole": "FE",
  "privOrComFlight": "P",
  "status": "NEW",
  "takeoffTimeEpoch": "1741580100",
  "takeoffTimeUtc": 2025-03-10T04:15:00.000Z,
  "totalTimeInService": 1023.5,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;
